<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_animaciones"
            android:icon="@drawable/ic_menu_imagen"
            android:title="@string/navmenu_animaciones" />
        <item
            android:id="@+id/nav_graficos"
            android:icon="@drawable/ic_menu_imagen"
            android:title="@string/navmenu_graficos" />
        <item
            android:id="@+id/nav_customview"
            android:icon="@drawable/ic_menu_imagen"
            android:title="@string/navmenu_customview" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/navmenu_audio" />
        <item
            android:id="@+id/nav_recordaudio"
            android:icon="@drawable/ic_menu_record"
            android:title="@string/navmenu_grabaraudio" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/navmenu_about" />
    </group>
</menu>
