<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ficheros_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/ficheros_tableRow_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ficheros_textView_fichero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ficheros_textView_filename" />

                    <EditText
                        android:id="@+id/ficheros_editText_filename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ficheros_hint_filename">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/ficheros_tableRow_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ficheros_textView_texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ficheros_textView_texto"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/ficheros_editText_texto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ficheros_hint_texto" />
                </TableRow>

                <TableRow
                    android:id="@+id/ficheros_tableRow_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ficheros_textView_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ficheros_numero"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/ficheros_editText_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TableRow>
            </TableLayout>

            <TextView
                android:text="@string/ficheros_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ficheros_store_internal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_internal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/ficheros_button_save"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    />

                <Button
                    android:id="@+id/ficheros_button_load"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_load"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ficheros_store_external"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_external"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/ficheros_button_save_ex"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_save"
                    />

                <Button
                    android:id="@+id/ficheros_button_load_Ex"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_load"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ficheros_store_db"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_database"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/ficheros_button_save_db"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_save"/>

                <Button
                    android:id="@+id/ficheros_button_load_db"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ficheros_load"/>
            </LinearLayout>

            <TextView
                android:id="@+id/ficheros_textView_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_uja"
                android:text="@string/ficheros_result"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:padding="5dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>