<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_panel_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/fragment_panel_pie"
        android:background="@drawable/uja"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/fragmentinfo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panel_listapersonalizada"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:layout_below="@+id/panel_textView_centro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin" />

    <TextView
        android:id="@+id/panel_textView_centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentPanelInfo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/fragment_panel_pie"
        android:layout_below="@+id/fragmentinfo_title"></ListView>

</RelativeLayout>